test/cli/test-validating-admission-policy/with-match-conditions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- disallow-host-path.yaml
resources:
- resources.yaml
results:
- isValidatingAdmissionPolicy: true
  kind: Pod
  policy: disallow-host-path
  resources:
  - bad-pod
  result: fail
- isValidatingAdmissionPolicy: true
  kind: Pod
  policy: disallow-host-path
  resources:
  - good-pod
  result: pass
- isValidatingAdmissionPolicy: true
  kind: Pod
  policy: disallow-host-path
  resources:
  - skipped-pod
  result: skip
